--- a/Deportes.html
+++ b/Deportes.html
@@ -11,7 +11,7 @@
             <hr size="5">    
         </div>    
         <div>
-                <a href="main.html">Inicio &nbsp;</a>
+                <a href="index.html">Inicio &nbsp;</a>
                 <a href="Deportes.html">Deportes &nbsp;</a>
                 <a href="Negocios.html">Negocios &nbsp;</a>
         <div>
